# project1_kivilev_dmitryi_M25-555

./: README.md  gameplay.cast  pyproject.toml
labyrinth_game/: constants.py  main.py  player_actions.py  utils.py
